--- a/directory.packages.props
+++ b/directory.packages.props
@@ -1,28 +1,28 @@
 <Project>
     <ItemGroup>
       <PackageVersion Include="MiniProfiler.AspNetCore.Mvc" Version="4.2.22" />
-      <PackageVersion Include="Refit" Version="6.0.15" />
-      <PackageVersion Include="Refit.HttpClientFactory" Version="6.0.15" />
-      <PackageVersion Include="DocumentFormat.OpenXml" Version="2.12.1" />
-      <PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.2" />
-      <PackageVersion Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0-preview.2" />
-      <PackageVersion Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0-preview.2" />
-      <PackageVersion Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.1" />
+      <PackageVersion Include="Refit" Version="6.0.38" />
+      <PackageVersion Include="Refit.HttpClientFactory" Version="6.0.38" />
+      <PackageVersion Include="DocumentFormat.OpenXml" Version="2.13.0" />
+      <PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.6" />
+      <PackageVersion Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
+      <PackageVersion Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0" />
+      <PackageVersion Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
       <PackageVersion Include="AutoMapper" Version="10.1.1" />
       <PackageVersion Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
-      <PackageVersion Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+      <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.1.4" />
       <PackageVersion Include="MediatR" Version="9.0.0" />
       <PackageVersion Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
       <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
       <PackageVersion Include="protobuf-net.Grpc" Version="1.0.152" />
       <PackageVersion Include="protobuf-net.Grpc.AspNetCore" Version="1.0.152" />
       <PackageVersion Include="Grpc.Net.Client" Version="2.37.0" />
-      <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="5.0.2" />
-      <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.2">
+      <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="5.0.6" />
+      <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.6">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageVersion>
-      <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.2" />
+      <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.6" />
       <PackageVersion Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
       <PackageVersion Include="Microsoft.Extensions.Configuration.FileExtensions" Version="5.0.0" />
       <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
