--- a/src/Cpnucleo.MVC/azure-pipelines.yml
+++ b/src/Cpnucleo.MVC/azure-pipelines.yml
@@ -4,8 +4,8 @@ pr:
 - master
 
 variables:
-  solution: '*/.sln'
-  project: '*/src/Cpnucleo.MVC/.csproj'
+  solution: 'Cpnucleo.sln'
+  project: 'src/Cpnucleo.MVC/.csproj'
   buildConfiguration: 'Release'  
 
 pool:
