--- a/src/Cpnucleo.GRPC/azure-pipelines.yml
+++ b/src/Cpnucleo.GRPC/azure-pipelines.yml
@@ -33,11 +33,10 @@ steps:
     arguments: '--configuration $(buildConfiguration)'
 
 - task: DotNetCoreCLI@2
-  displayName: Build Tests
+  displayName: Test
   inputs:
-    command: 'build'
+    command: 'test'
     projects: '**/*.Test/*.csproj'
-    arguments: '-c Debug'
 
 - task: DotNetCoreCLI@2
   displayName: Publish
