--- a/Cpnucleo.Infra.CrossCutting.Bus/Cpnucleo.Infra.CrossCutting.Bus.csproj
+++ b/Cpnucleo.Infra.CrossCutting.Bus/Cpnucleo.Infra.CrossCutting.Bus.csproj
@@ -7,7 +7,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Ev.ServiceBus" Version="3.3.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\src\Cpnucleo.Infra.CrossCutting.Util\Cpnucleo.Infra.CrossCutting.Util.csproj" />
 	</ItemGroup>
 	
 </Project>
