--- a/src/Cpnucleo.GRPC/appsettings.Development.json
+++ b/src/Cpnucleo.GRPC/appsettings.Development.json
@@ -11,5 +11,8 @@
     "Key": "fedaf7d8863b48e197b9287d492b708e",
     "Expires": "43200",
     "Issuer": "https://localhost:5021"
-  }  
+  },
+  "AppSettings": {
+    "UrlCpnucleoMvc": "https://localhost:5031"
+  }
 }
