--- a/src/Cpnucleo.GRPC/appsettings.json
+++ b/src/Cpnucleo.GRPC/appsettings.json
@@ -10,7 +10,10 @@
     "Key": "fedaf7d8863b48e197b9287d492b708e",
     "Expires": "43200",
     "Issuer": "https://grpc-cpnucleo.azurewebsites.net"
-  },  
+  },
+  "AppSettings": {
+    "UrlCpnucleoMvc": "https://cpnucleo-mvc.azurewebsites.net"
+  },
   "AllowedHosts": "*",
   "Kestrel": {
     "EndpointDefaults": {
