--- a/src/Cpnucleo.Infra.CrossCutting.Bus/Cpnucleo.Infra.CrossCutting.Bus.csproj
+++ b/src/Cpnucleo.Infra.CrossCutting.Bus/Cpnucleo.Infra.CrossCutting.Bus.csproj
@@ -13,7 +13,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\src\Cpnucleo.Infra.CrossCutting.Util\Cpnucleo.Infra.CrossCutting.Util.csproj" />
+	  <ProjectReference Include="..\Cpnucleo.Infra.CrossCutting.Util\Cpnucleo.Infra.CrossCutting.Util.csproj" />
 	</ItemGroup>
 	
 </Project>
