--- a/src/Cpnucleo.Blazor/wwwroot/appsettings.Development.json
+++ b/src/Cpnucleo.Blazor/wwwroot/appsettings.Development.json
@@ -3,6 +3,6 @@
     "Expires": "720"
   },
   "AppSettings": {
-    "UrlCpnucleoApi": "https://api-cpnucleo.azurewebsites.net"
+    "UrlCpnucleoApi": "https://localhost:5011"
   }
 }
